--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
@@ -8,12 +8,11 @@
     "experimentalDecorators": true,
     "removeComments": true,
     "noImplicitAny": false,
-    "outDir": "dist/"
+    "noLib": false,
+    "outDir": "lib/"
   },
   "exclude": [
     "node_modules",
-    "typings",
-    "build",
-    "dist"
+    "lib"
   ]
 }
