--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.12",
   "description": "NXP LPC Microprocessor Programmer",
   "author": "Claudio Destro <c.destro@vlabsistemi.com>",
+  "license": "LGPL-3.0",
   "dependencies": {
     "buffer-hexdump": "^1.0.0",
     "commander": "^2.9.0",
@@ -10,6 +11,11 @@
     "serialport": "^2.0.5"
   },
   "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-mocha": "^2.2.0",
+    "gulp-rm": "^1.0.0",
+    "gulp-typescript": "^2.11.0",
+    "merge2": "^1.0.1",
     "mocha": "^2.4.5",
     "tsd": "^0.6.5",
     "typescript": "^1.7.5"
@@ -33,9 +39,5 @@
     "lpc"
   ],
   "scripts": {
-    "prepublish": "tsc -d",
-    "pretest": "tsc test/*Test.ts --target es5 --module commonjs --moduleResolution node",
-    "posttest": "rm -fr test/*Test.js",
-    "test": "mocha"
   }
 }
