--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "gulp-typescript": "^2.11.0",
     "merge2": "^1.0.1",
     "mocha": "^2.4.5",
-    "tsd": "^0.6.5",
-    "typescript": "^1.7.5"
+    "typescript": "^1.7.5",
+    "typings": "^0.6.8"
   },
   "main": "lib/index.js",
   "bin": {
