--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
   "exclude": [
     "lib",
     "node_modules",
-    "test"
+    "test",
+    "typings/browser.d.ts",
+    "typings/browser"
   ]
 }
