Import 'flashmagic.js' instead of 'flashmagic.js/lib'.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "typescript": "^1.7.5",
     "typings": "^0.6.8"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "bin": {
     "flashmagic": "bin/flashmagic.js"
   },
