--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "gulp": "^3.9.1",
     "gulp-mocha": "^3.0.1",
     "gulp-rm": "^1.0.1",
-    "gulp-typescript": "^2.13.6",
+    "gulp-typescript": "^3.0.1",
     "merge2": "^1.0.2",
     "mocha": "^3.0.2",
     "run-sequence": "^1.2.2",
-    "typescript": "^1.8.10",
-    "typings": "^1.3.3"
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   },
   "main": "index.js",
   "bin": {
@@ -33,12 +33,14 @@
     "url": "https://github.com/claudio-destro/flashmagic.js.git"
   },
   "keywords": [
+    "arm",
     "es6",
-    "typescript",
     "javascript",
-    "serialport",
+    "lpc",
+    "lpc21isp",
     "nxp",
-    "lpc"
+    "serialport",
+    "typescript"
   ],
   "scripts": {
     "prepublish": "gulp publish",
